prevent bx slider arrow from overlapping with images

--- a/flickpick/static/css/flickpick.css
+++ b/flickpick/static/css/flickpick.css
@@ -65,6 +65,9 @@ body {
 
 /*row focus widget*/
 
+.bx-wrapper {
+    margin: 0 20px!important;
+}
 .slider-control.prev {
     text-align: right;
     position: absolute;
